# kaos

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  index.html  pyproject.toml
blog/: kaos-v0.9.0.html
demo_action_realization_bench/: ISA.lock.json  PROBE_PREREG.md  VERDICT.md  arms.py  falsify.py  gates.py  probe_adapter.py  results.json  run.py  workload.py
demo_consolidation_scale_bench/: README.md  results.json  results.md
demo_critical_step_bench/: README.md  results.json  results.md  run.py
demo_plasticity_overhead_bench/: results.json  results.md
demo_quality_score_bench/: README.md  results.json  results.md  run.py
demo_synthesis_consolidation_bench/: CLOSING.md  ISA.lock.json  ISA.lock.v2.json  PROBE_PREREG.md  VERDICT.md  _enumerate.py  _manifests.json  arms.py  falsify.py  gates.py  judge.py  probe.py  probe_results.json  queries.py  results.json  run.py  workload.py  world.py
docs/: cli-reference.md  mcp-integration.md
docs/roadmap/: v0.8.3.md  v0.9-synthesis-evaluation.md  v0.9.md
examples/: falsifiable_probe.py
kaos/: __init__.py  experiments.py  ideal_state.py  runtime.py  schema.py  skills.py
kaos/ccr/: runner.py  tools.py
kaos/cli/: main.py
kaos/dream/: auto.py  diagnosis.py  signals.py
tests/: test_action_realization_probe.py  test_critical_step.py  test_eval_harness.py  test_experiments.py  test_failure_taxonomy.py  test_ideal_state.py  test_mcp_v091.py  test_proposer_streaming.py  test_quality_score.py  test_runtime.py  test_schema_migration.py  test_situation.py  test_track_b_integration.py  test_ui_server.py
(+19 files in other folders)
