[project]
name = "kaos"
version = "0.9.0"
description = "KAOS — Kernel for Agent Orchestration & Sandboxing. Isolated, auditable, portable agent runtimes backed by SQLite."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Danilo Canivel" },
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "ulid-py>=1.1",
    "zstandard>=0.22",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "mcp>=1.0",
    "rich>=13.0",
    "textual>=0.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
fuse = [
    "fusepy>=3.0",
]
benchmarks = [
    "numpy>=1.24",
]

[project.scripts]
kaos = "kaos.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
